--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.101",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "ajv": "^8.17.1",
     "axios": "^1.7.2",
     "css-loader": "^7.1.2",
     "history": "^5.3.0",
