--- a/server/.env.production
+++ b/server/.env.production
@@ -1,4 +1,8 @@
-REACT_APP_CLIENT_ID=YOUR_AZURE_CLIENT_ID
-REACT_APP_TENANT_ID=YOUR_AZURE_TENANT_ID
+NODE_ENV="Development"
+BE_VERSION=`${npm_package_version}`
 
-REACT_APP_BE=YOUR_BACKEND_URI #For example http://localhost:5000/api
+CLIENT_ID='YOUR_AZURE_CLIENT_ID'
+TENANT_ID='YOUR_AZURE_TENANT_ID'
+CLIENT_SECRET='YOUR_AZURE_APP_SECRET'
+PORT=5000
+
