--- a/server/package.json
+++ b/server/package.json
@@ -1,64 +1,40 @@
 {
-  "name": "azure-front",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@azure/msal-browser": "^3.18.0",
-    "@azure/msal-react": "^2.0.20",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/material": "^5.16.0",
-    "@reduxjs/toolkit": "^2.2.6",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.101",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "axios": "^1.7.2",
-    "css-loader": "^7.1.2",
-    "history": "^5.3.0",
-    "lodash": "^4.17.21",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.1",
-    "react-scripts": "5.0.1",
-    "redux-persist": "^6.0.0",
-    "sass": "^1.77.7",
-    "sass-loader": "^14.2.1",
-    "style-loader": "^4.0.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "@types/lodash": "^4.17.6",
-    "@types/react-router-dom": "^5.3.3",
-    "resolve-url-loader": "^5.0.0"
-  }
+	"name": "azure-auth-rest-api",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"type": "commonjs",
+	"private": "true",
+	"scripts": {
+		"build": "tsc",
+		"start": "ts-node-dev --respawn --transpile-only src/server.ts",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"@azure/msal-node": "^2.9.2",
+		"@microsoft/microsoft-graph-client": "^3.0.7",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"express": "^4.19.2",
+		"jsonwebtoken": "^9.0.2",
+		"mongoose": "^8.15.0",
+		"morgan": "^1.10.0",
+		"msal-node": "^0.0.1-security",
+		"nodemon": "^3.1.4",
+		"passport-azure-ad": "^4.3.5"
+	},
+	"devDependencies": {
+		"@types/cors": "^2.8.17",
+		"@types/express": "^4.17.21",
+		"@types/jsonwebtoken": "^9.0.6",
+		"@types/morgan": "^1.9.9",
+		"@types/node": "^20.14.6",
+		"@types/passport-azure-ad": "^4.3.6",
+		"isomorphic-fetch": "^3.0.0",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.4.5"
+	}
 }
