--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,44 +1,12 @@
-// {
-// 	"compilerOptions": {
-// 		"target": "es5",
-// 		"lib": ["dom", "dom.iterable", "esnext"],
-// 		"allowJs": true,
-// 		"skipLibCheck": true,
-// 		"esModuleInterop": true,
-// 		"allowSyntheticDefaultImports": true,
-// 		"strict": true,
-// 		"forceConsistentCasingInFileNames": true,
-// 		"noFallthroughCasesInSwitch": true,
-// 		"module": "esnext",
-// 		"moduleResolution": "node",
-// 		"resolveJsonModule": true,
-// 		"isolatedModules": true,
-// 		"noEmit": true,
-// 		"jsx": "react-jsx"
-// 	},
-// 	"include": ["src/**/**/**/*.tsx", "src/**/**/**/*.ts"]
-// }
-
 {
 	"compilerOptions": {
-		"target": "es6",
-		"lib": ["dom", "dom.iterable", "esnext"],
-		"allowJs": true,
-		"skipLibCheck": true,
+		"target": "ES6",
+		"module": "commonjs",
+		"strict": true,
 		"esModuleInterop": true,
-		"allowSyntheticDefaultImports": true,
-		"forceConsistentCasingInFileNames": true,
-		"noFallthroughCasesInSwitch": true,
-		"module": "esnext",
-		"moduleResolution": "node",
-		"resolveJsonModule": true,
-		"strictNullChecks": false,
-		"isolatedModules": true,
-		"noEmit": true,
-		"jsx": "react-jsx",
-		"baseUrl": "src",
-		"strict": true
+		"skipLibCheck": true,
+		"outDir": "./dist"
 	},
-	"include": ["src/**/*", "src/layout/layouts"],
+	"include": ["src/**/*", "@types"],
 	"exclude": ["node_modules"]
 }
