--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.3.0",
     "ajv": "^8.17.1",
     "axios": "^1.7.2",
+    "connected-react-router": "^6.9.3",
     "css-loader": "^7.1.2",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
