--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,11 @@
 		"@azure/msal-node": "^2.9.2",
 		"@microsoft/microsoft-graph-client": "^3.0.7",
 		"cors": "^2.8.5",
+		"csv-parse": "^5.6.0",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.15.0",
+		"mongoose": "^8.16.1",
 		"morgan": "^1.10.0",
 		"msal-node": "^0.0.1-security",
 		"nodemon": "^3.1.4",
@@ -31,7 +32,7 @@
 		"@types/express": "^4.17.21",
 		"@types/jsonwebtoken": "^9.0.6",
 		"@types/morgan": "^1.9.9",
-		"@types/node": "^20.14.6",
+		"@types/node": "^20.19.4",
 		"@types/passport-azure-ad": "^4.3.6",
 		"isomorphic-fetch": "^3.0.0",
 		"ts-node-dev": "^2.0.0",
